--- a/source/_posts/19/05/01/190501m130707.md
+++ b/source/_posts/19/05/01/190501m130707.md
@@ -26,6 +26,11 @@ date: 2019-05-01 13:07:07
     <li><strong>2019-05-09:</strong> <a href="#190509m073023">Section</a>.</li>
     <li><strong>2019-05-10:</strong> <a href="#190510m071656">Section</a>.</li>
     <li><strong>2019-05-11:</strong> <a href="#190511m075146">Section</a>.</li>
+    <li><strong>2019-05-12:</strong> <a href="#190512m080121">Section</a>.</li>
+    <li><strong>2019-05-13:</strong> <a href="#190513m084031">Section</a>.</li>
+    <li><strong>2019-05-14:</strong> <a href="#190514m083913">Section</a>.</li>
+    <li><strong>2019-05-15:</strong> <a href="#190515m012915">Section</a>.</li>
+    <li><strong>2019-05-16:</strong> <a href="#190516m082549">Section</a>.</li>
     <li><strong>2019-05-??:</strong> <a href="#xx">Section</a>.</li>
   </ol>
 </div>
@@ -34,22 +39,36 @@ date: 2019-05-01 13:07:07
   <h2>2019-05<a id="190501m131032"></a></h2>
   <div class="kwCloud">
     <div class="itm s3">Exercising</div>
+    <div class="itm s1">Lower back muscle</div>
+    <div class="itm s1">核心肌群</div>
     <div class="itm s3">Volunteering</div>
+    <div class="itm s4">{ Stoicism }</div>
+    <div class="itm s3">Virtue</div>
+    <div class="itm s1">Understand what you can/can't controls</div>
+    <div class="itm s1">Understand what won't/will changes</div>
     <div class="itm s2">Toughness</div>
     <div class="itm s2">Live inside "the zone"</div>
+    <div class="itm s1">Purpose of life</div>
+    <div class="itm s2">Sensibility</div>
+    <div class="itm s2">Rationality</div>
     <div class="itm s1">{ Twice }</div>
     <div class="itm s1">{ Kpop }</div>
     <div class="itm s1">{ Node.js }</div>
     <div class="itm s1">{ Express.js }</div>
     <div class="itm s2">{ Back-end }</div>
     <div class="itm s3">{ LoveAndHappiness } project</div>
+    <div class="itm s1">{ lahSale }</div>
     <div class="itm s2">{ Woody }</div>
     <div class="itm s1">{ Vue.js }</div>
-    <div class="itm s1">{ Bootstrap }</div>
     <div class="itm s1">{ SASS } and { SCSS }</div>
     <div class="itm s1">{ CSS 的模組化 }</div>
+    <div class="itm s1">{ Bootstrap }</div>
+    <div class="itm s1">{ Font-awesome }</div>
     <div class="itm s1">{ Git }</div>
+    <div class="itm s1">{ Accessibility }</div>
+    <div class="itm s2">Efficiency is extremely distributed</div>
     <div class="itm s1">{ Marginal utility } of doing everything</div>
+    <div class="itm s1">Book</div>
   </div>
   <ol>
     <li><strong>( Music ) { TWICE } - Heart Shaker - acoustic remix:</strong> <a href="https://youtu.be/D2Fkg1MOOIM">Link</a>.</li>
@@ -123,6 +142,42 @@ date: 2019-05-01 13:07:07
             <li><strong>Upper body exercising:</strong></li>
             <li><strong>Understanding { Bootstrap }:</strong></li>
             <li><strong>Understand HTML { form }.</strong></li>
+          </ol>
+        </li>
+        <li><strong>190511:</strong>
+          <ol>
+            <li><strong>Working on { lahSale } ,, styling.</strong></li>
+            <li><strong>Understanding { Bootstrap }:</strong> The strength of { Bootstrap } is, you don't need to waste any time on desigining, you do nothing.</li>
+            <li><strong>( CSS ) How to make "sticky footer", in five Ways:</strong> <a href="https://css-tricks.com/couple-takes-sticky-footer/">Link</a>. I prefer flex-box version and grid version most.</li>
+            <li><strong>( CSS ) Child inside parent with min-height: 100% not inheriting height:</strong> <a href="https://stackoverflow.com/a/21836870/10607630">Link</a>. Add <code>height: 1px;</code> to fix this "bug". But it don't adapt to child size, which is useless.</li>
+          </ol>
+        </li>
+        <li><strong>190512:</strong>
+          <ol>
+            <li><strong>Find date picker input module which has good accessibility support:</strong> Found <a href="https://github.com/eureka2/ab-datepicker#dependencies">{ eureka2/ab-datepicker }</a> which are good at accessibility.</li>
+            <li><strong>Working on { lahSale }:</strong> Styling using Bootstrap and Font-awesome. Tomorrow is the user feedback stage of the <u>sale system</u>, so this need to be done.</li>
+          </ol>
+        </li>
+        <li><strong>190513:</strong>
+          <ol>
+            <li><strong>( Javascript ) { Object Destructuring },  { Array Destructuring }, { Spread syntax }, { reduce() }, { map() }, { filter() }.</strong></li>
+            <li><strong>Accessibility.</strong></li>
+            <li><strong>{ lahSale } ,, apply "sticky footer".</strong></li>
+          </ol>
+        </li>
+        <li><strong>190514:</strong>
+          <ol>
+            <li><strong>( Philosophy ) { udn.com } - 林斯諺／什麼是 "高級藝術"？什麼是 "低級藝術"？:</strong> <a href="https://opinion.udn.com/opinion/story/6685/3637898">Link</a>. What is "High level art" and "low level art"? My conclusion - both <code>Sensibility</code> and <code>Rationality</code> are <strong>2 pillar of humanity and form the purpose of life</strong>, none is more important than other.</li>
+            <li><strong>( Philosophy ) { udn.com } - 廖育廷／要活出生命意義，是自己爽就好，還是有客觀標準？:</strong> <a href="https://opinion.udn.com/opinion/story/6685/3582749">Link</a>. Is purpose of life is decide by totally personal satisfaction? Or by totally serving others?</li>
+            <li><strong>( Philosophy ) { udn.com } - 廖育廷／過程比結果重要？人生的意義在於過程？:</strong> <a href="https://opinion.udn.com/opinion/story/6685/3692120">Link</a>.</li>
+            <li><strong>( Vue ) { Slot }:</strong> <a href="https://vuejs.org/v2/guide/components-slots">Link</a>. Including <code>named slots</code> and <code>scoped slots</code>.</li>
+            <li><strong>( Accessibility ) Some html attibutes ... .</strong></li>
+          </ol>
+        </li>
+        <li><strong>190515:</strong>
+          <ol>
+            <li><strong>( Philosophy ) { Stoicism }.</strong></li>
+            <li><strong>Reading book.</strong></li>
           </ol>
         </li>
       </ol>
@@ -522,7 +577,7 @@ date: 2019-05-01 13:07:07
   <ol>
     <li><strong>Upper body exercising:</strong>
       <ol>
-        <li><strong>"Static bridge":</strong> <a href="https://youtu.be/aqqwZ_leAMA?t=169">Link</a>. Not moving. Holding bridge-like posture. Endurance of back and maybe other muscle.</li>
+        <li><strong>"Static plank":</strong> <a href="https://youtu.be/aqqwZ_leAMA?t=169">Link</a>. Not moving. Holding bridge-like posture. Endurance of back and maybe other muscle.</li>
         <li><strong>"Pike" push up:</strong> <a href="https://youtu.be/NYL1HaT9JfU?t=885">Link</a>. Palm and foot are much closer.</li>
         <li><strong>"Staggered" push up and use knees:</strong> <a href="https://youtu.be/NYL1HaT9JfU?t=344">Link1</a>, <a href="https://youtu.be/sYYjx_W7rUY?t=118">link2</a>. Also see the girl, she use knees to touch the ground so the hand endure less weight, good method.</li>
         <li><strong>"Dolphin" push up:</strong> <a href="https://youtu.be/NYL1HaT9JfU?t=1212">Link</a>. Your head move forwward and backward from hands.</li>
@@ -576,6 +631,263 @@ date: 2019-05-01 13:07:07
 <div class="h2">
   <h2>2019-05-11<a id="190511m075146"></a></h2>
   <div class="kwCloud">
+    <div class="itm s2">{ Bootstrap }</div>
+    <div class="itm s1">{ lahSale }</div>
+    <div class="itm s1">{ Sticky footer }</div>
+  </div>
+  <ol>
+    <li><strong>( Music ) ( Live ) TWICE - Sleep tight good night, 20171206:</strong> <a href="https://youtu.be/M4pk0Wx372w">Link</a>.</li>
+    <li><strong>( CSS ) How to make "sticky footer", in five Ways:</strong> <a href="https://css-tricks.com/couple-takes-sticky-footer/">Link</a>. I prefer flex-box version and grid version most.</li>
+    <li><strong>( CSS ) Viewport vs Percentage Units:</strong> <a href="https://bitsofco.de/viewport-vs-percentage-units/">Link</a>. Use vh over % for height , use % over vw for width.</li>
+    <li><strong>( CSS ) Child inside parent with min-height: 100% not inheriting height:</strong> <a href="https://stackoverflow.com/a/21836870/10607630">Link</a>. Add <code>height: 1px;</code> to fix this "bug".  But it don't adapt to child size, which is useless.</li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>07:30 Wake up.</strong></li>
+        <li><strong>07:50 Upload blog.</strong></li>
+        <li><strong>08:00 Working on { LoveAndHappiness }:</strong> Can't found seperate project <code>lahSale</code>.</li>
+        <li><strong>08:50 Cooking.</strong></li>
+        <li><strong>09:10 Eating, watching video, brushing teeth:</strong> <a href="https://youtu.be/_G2rmNHQ3s8">She's Danni - Weekly Vlog 40｜我的第一次冲浪体验🏄｜复仇者联盟｜台球练习</a></li>
+        <li><strong>09:55 Working on { lahSale }, which is subset of { LoveAndHappiness }:</strong> { lahSale } is subset of { LoveAndHappiness }, the sale part. I tried to set the style directory and path right, keep changing config, refactoring ... And when I finally can make a <code>pull request</code> to base repo, I found 2 repo without <code>fork</code> relationship, is not allowed to do this, so I have to do the <code>fork</code> again, and migrate the modified file one by one to the forked one ... So time consuming because I don't want to make anything wrong.</li>
+        <li><strong>13:00 Eatting apple and brushing teeth.</strong></li>
+        <li><strong>13:25 Keep working on { lahSale }:</strong> Refactoring main global style sheet file.</li>
+        <li><strong>14:20 Thinking how to make "sticky footer".</strong></li>
+        <li><strong>14:50 Taking a nap.</strong></li>
+        <li><strong>15:20 Watching video:</strong> <a href="https://youtu.be/4498U9wx5Tg">Link</a>.</li>
+        <li><strong>15:40 Thinking how to make "sticky footer".</strong></li>
+        <li><strong>18:50 Still can't solve "sticky footer" problem, give up right now:</strong> Will fix it in future.</li>
+        <li><strong>18:51 Apply bootstrap style on site:</strong> Very fast, almost no need to do anything.</li>
+        <li><strong>20:00 { lahSale } ,, Push to github.</strong></li>
+        <li><strong>20:10 Cooking and eating, and thinking:</strong> Sit back and watching what <code>woody</code> did so far, he build the entire and complex sales system in such a short period of time. Amazing. What I leaned is the efficiency can be push to this kind of degree.</li>
+        <li><strong>21:20 Watching video:</strong> <a href="https://youtu.be/M4pk0Wx372w">TWICE - SLEEP TIGHT GOOD NIGHT, 20171206</a>.</li>
+        <li><strong>23:59 Sleep:</strong> Too late, bad old habit again.</li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-05-12<a id="190512m080121"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s2">Exercising</div>
+    <div class="itm s2">Lower back muscle</div>
+    <div class="itm s2">核心肌群</div>
+    <div class="itm s1">{ 深蹲 }</div>
+    <div class="itm s1">[ Exercising ]-{ Plank }</div>
+    <div class="itm s1">{ 超負荷 } 與 { 超補償 }</div>
+    <div class="itm s1">Back-end</div>
+    <div class="itm s1">{ lahSale }</div>
+    <div class="itm s2">{ Font-awesome }</div>
+  </div>
+  <ol>
+    <li><strong>( Exercising ) 如何鍛鍊 "下" 背 (lower back muscle):</strong>
+      <ol>
+        <li><strong>如何鍛鍊強壯的 "下" 背 - 床上做:</strong> <a href="https://youtu.be/zoZ1pVAfoRY">Link1</a>, <a href="https://youtu.be/bqT2mev-6U0?t=346">link2</a>, <a href="https://youtu.be/2fgM0PYXaZk">link3</a>.</li>
+        <li><strong>5分鐘強化腰部 - 站立做 - 遠離腰背痛 - 蹲膝，一腿往後伸， 手舉:</strong> <a href="https://youtu.be/Qzp3_QMJ0kY">Link</a>. <a href="http://www.jointfit.hk/5minsbacktraining/">His website</a>.</li>
+        <li><strong>單腳，彎腰，加雙手提啞鈴 - 站立做:</strong> <a href="https://youtu.be/zqvJUsg8PS4?t=92">Link</a>.</li>
+        <li><strong>腹外斜肌訓練 - side plank (or bridge) - 床上做:</strong> <a href="https://youtu.be/8VkBfE5V_0A?t=21">Link</a>.</li>
+        <li><strong>核心肌群 - 女生:</strong> <a href="https://youtu.be/3Qw5vvyibZA">Link</a>.</li>
+        <li><strong>核心肌群 - 女生2:</strong> <a href="https://youtu.be/VPydBcOBSx4?t=245">Link</a>. <strong>深蹲</strong>，上下台階，跳繩，貓式 (<a href="https://youtu.be/tqt4IkkrnAU?t=287">這個更好?</a>)，躺床抬腿。 不確定這些知識正不正確，但鍛鍊核心肌群很重要，常常聽到。</li>
+        <li><strong>Plank:</strong> So my conclusion is, <code>planks</code> can be grouped to these 3 types - face down, face up, <a href="https://youtu.be/Y458JwXPn58?t=399">side</a>.</li>
+        <li><strong>仰臥起坐對你的背部不好？:</strong> <a href="https://youtu.be/xjhGVvqWjxs">Link</a>.</li>
+      </ol>
+    </li>
+    <li><strong>( Exercising ) 了解 { 超負荷 } 與 { 超補償 }:</strong> <a href="https://www.mr-sport.com.tw/post/overload-and-supercompensation.html">Link</a>.</li>
+    <li><strong>( Vue.js ) { created() } vs { mounted() }:</strong> { created() } is before dom-rendering, { mounted() } is after.</li>
+    <li><strong>Install { font-awesome } on { vue.js }:</strong> To install v5, need npm package <a href="https://github.com/FortAwesome/vue-fontawesome#installation">{ @fortawesome }</a> (v5), not <code>font-awsome</code> (v4 only). </li>
+    <li><strong>( Bootstrap ) What is class=“mb-0” in Bootstrap 4?:</strong> <a href="https://stackoverflow.com/questions/41574776/what-is-class-mb-0-in-bootstrap-4">Link</a>.</li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>07:50 Wake up.</strong></li>
+        <li><strong>08:15 Exercising at home.</strong></li>
+        <li><strong>08:40 Watching video about exercising.</strong></li>
+        <li><strong>11:55 Take a nap.</strong></li>
+        <li><strong>12:25 Upload blog and tweaking keyword cloud scale size.</strong></li>
+        <li><strong>13:00 Find html5 date picker input module.</strong></li>
+        <li><strong>13:30 Found why { eureka2/ab-datepicker } date picker don't work properly:</strong> Found <a href="https://github.com/eureka2/ab-datepicker#dependencies">{ eureka2/ab-datepicker }</a> which are good at accessibility. But however I tried, I still can't found the [ reason ]-[ problem ] the button not work properly (glitchy) on my machine. After speding one hour go through every possibility, I finally found they mentioned they are using <code>Bootstrap 3</code> instead of 4, in the not easily seen area. And I have to use extra option <code>markup: 'bootstrap4',</code> and install <code>font-awesome</code> to load it properly.</li>
+        <li><strong>14:40 Searching about how to load external javascript into { Vue.js }:</strong> For { eureka2/ab-datepicker }.</li>
+        <li><strong>15:50 Misc.</strong></li>
+        <li><strong>16:20 Cooking.</strong></li>
+        <li><strong>16:50 Understanding { font-awesome }.</strong></li>
+        <li><strong>17:00 Brushing teeth.</strong></li>
+        <li><strong>17:10 Understanding { font-awesome }.</strong></li>
+        <li><strong>18:00 Try to install new { font-awesome } version:</strong> V4 to v5, need npm package <a href="https://github.com/FortAwesome/vue-fontawesome#installation">{ @fortawesome }</a> (v5), not <code>font-awsome</code> (v4 only). </li>
+        <li><strong>19:15 Keep working on { lahSale }:</strong> Styling using Bootstrap and Font-awesome. Tomorrow is the user feedback stage of the <u>sale system</u>, so this need to be done.</li>
+        <li><strong>22:10 Cooking.</strong>.</li>
+        <li><strong>22:30 Eating and watching video:</strong> <a href="https://youtu.be/l5wnSLq1Wqw">TWICE - "FANCY" Dance Cover | Ellen and Brian</a>, <a href="https://youtu.be/0Hqi5DlHQKw">【今周刊】從學渣到學霸 台灣英語教父的成妖之路</a>, <a href="https://youtu.be/v95MoOaLyFY">袁腾飞聊996：是兄弟就来加班？加你妹！</a>.</li>
+        <li><strong>23:59 Sleeping.</strong>.</li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-05-13<a id="190513m084031"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">Back-end</div>
+    <div class="itm s1">{ Express.js }</div>
+    <div class="itm s1">{ lahSale }</div>
+    <div class="itm s1">{ Accessibility }</div>
+  </div>
+  <ol>
+    <li><strong>( excercise ) 在家健身的【兩樣神器】4天練全身:</strong> <a href="https://youtu.be/5PBEodvSVjU">Link</a>. I just want to keep that muscle distribution figure.</li>
+    <li><strong>( Javascript ) { Object Destructuring } and { Array Destructuring }:</strong> <a href="https://youtu.be/Mus_vwhTCq0?t=195">Link1</a>, <a href="https://stackoverflow.com/questions/33524696/es6-destructuring-and-module-imports#33524809">link2</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment">MDN</a>. See MDN.</li>
+    <li><strong>( Javascript ) { Spread syntax }:</strong> <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Spread_syntax">Link</a>.</li>
+    <li><strong>( Javascript ) { reduce() }, { map() }, and { filter() }:</strong> <a href="https://youtu.be/Mus_vwhTCq0?t=608">Link</a>. <code>reducer = (accumulator, currentValue) =&gt; accumulator + currentValue;</code>.</li>
+    <li><strong>( Javascript ) Why doesn't .includes() work with .classList?:</strong> <a href="https://stackoverflow.com/questions/37566597/why-doesnt-includes-work-with-classlist">Link</a>.</li>
+    <li><strong>( Accessibility ) - Accessibility features in Firefox - Make Firefox and web content work for all users:</strong> <a href="https://support.mozilla.org/en-US/kb/accessibility-features-firefox-make-firefox-and-we#w_screen-reader">Link</a>.</li>
+    <li><strong>( Accessibility ) - An overview of accessible web applications and widgets:</strong> <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/An_overview_of_accessible_web_applications_and_widgets">Link</a>.</li>
+    <li><strong>( Accessibility ) - w3c - Using ARIA:</strong> <a href="https://w3c.github.io/using-aria/">Link</a>.</li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>08:30 Wake up.</strong></li>
+        <li><strong>08:40 Upload blog.</strong></li>
+        <li><strong>08:55 Bathroom.</strong> I put "上大號" to google translate and what it give me is "Upper size" ... ok, google translate ...</li>
+        <li><strong>09:05 Watching video:</strong> Useful and useless stuff.</li>
+        <li><strong>09:35 Learning Javascript:</strong> <code>Object Destructuring</code> and <code>Array Destructuring</code>.</li>
+        <li><strong>10:25 Misc, grocery.</strong></li>
+        <li><strong>11:00 Cooking, learning Javascript.</strong></li>
+        <li><strong>11:00 Eating, learning Javascript.</strong></li>
+        <li><strong>12:00 Brushing teeth.</strong></li>
+        <li><strong>12:10 Solving "sticky footer" problem:</strong> Solved in my sandbox, now I can apply this to <code>lahSale</code>.</li>
+        <li><strong>12:40 Watching video.</strong>: <a href="https://youtu.be/KMTBm-2j1AE">Reasons twice sana deserves happiness and success</a></li>
+        <li><strong>13:00 { lahSale } ,, apply "sticky footer".</strong></li>
+        <li><strong>14:15 { lahSale } ,, change footer style.</strong></li>
+        <li><strong>15:15 Take a nap.</strong></li>
+        <li><strong>15:40 Watching video:</strong> <a href="https://youtu.be/whfYD4J_Nhs">台灣基進 - 再見了！中國】中天為何變這樣？中國「宣傳工具」根本不是媒體？</a>.</li>
+        <li><strong>16:00 Understand { css grid} ,, { auto-fill or auto-fit }.</strong></li>
+        <li><strong>16:00 { lahSale } ,, change footer style.</strong></li>
+        <li><strong>19:00 Cooking and eating.</strong></li>
+        <li><strong>19:50 Brushing teeth.</strong></li>
+        <li><strong>20:00 Watching video.</strong></li>
+        <li><strong>20:30 Group chat with { Woody }.</strong></li>
+        <li><strong>21:20 Misc.</strong></li>
+        <li><strong>21:25 { lahSale } ,, change footer style.</strong></li>
+        <li><strong>21:55 Learning about { Aria } and accessibility:</strong> Confusing, can't find helpful information.</li>
+        <li><strong>22:35 Watching video:</strong> <a href="https://youtu.be/0g6rP-q2Pr4">【一席】李一諾：比爾·蓋茨怎麼花錢</a>.</li>
+        <li><strong>22:50 Sleep:</strong> <a href="https://youtu.be/0g6rP-q2Pr4">【一席】李一諾：比爾·蓋茨怎麼花錢</a>.</li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-05-14<a id="190514m083913"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s2">Purpose of life</div>
+    <div class="itm s1">"High art" and "low art"?</div>
+    <div class="itm s2">Sensibility</div>
+    <div class="itm s2">Rationality</div>
+    <div class="itm s1">{ lahSale }</div>
+    <div class="itm s1">{ Vue ,, slot }</div>
+    <div class="itm s1">{ Accessibility }</div>
+  </div>
+  <li><strong>( Philosophy ) { udn.com } - 林斯諺／什麼是 "高級藝術"？什麼是 "低級藝術"？:</strong> <a href="https://opinion.udn.com/opinion/story/6685/3637898">Link</a>. What is "High level art" and "low level art"? My conclusion - both <code>Sensibility</code> and <code>Rationality</code> are <strong>2 pillar of humanity and form the purpose of life</strong>, none is more important than other.</li>
+  <li><strong>( Philosophy ) { udn.com } - 廖育廷／要活出生命意義，是自己爽就好，還是有客觀標準？:</strong> <a href="https://opinion.udn.com/opinion/story/6685/3582749">Link</a>. Is purpose of life is decide by totally personal satisfaction? Or by totally serving others?</li>
+  <li><strong>( Philosophy ) { udn.com } - 廖育廷／過程比結果重要？人生的意義在於過程？:</strong> <a href="https://opinion.udn.com/opinion/story/6685/3692120">Link</a>.</li>
+  <li><strong>( Philosophy ) { udn.com } - 廖育廷／人生有沒有意義？還是充滿反面意義？ - 對社會負貢獻:</strong> <a href="https://opinion.udn.com/opinion/story/6685/3652604">Link</a>.</li>
+  <li><strong>( Documentary ) CBC Docs - After growing up in a violent family, a blind martial arts teacher finds independence | Night Strike:</strong>   <a href="https://youtu.be/zSt1LFEX12Q">Link</a>.</li>
+  <li><strong>( 中美貿易戰 ) 北京600億報復 美再列3250億！ - 公共電視 - 有話好說:</strong> <a href="https://youtu.be/Geb8BrYWSmY">Link</a>.</li>
+  <li><strong>( Vue ) { Slot }:</strong> <a href="https://vuejs.org/v2/guide/components-slots">Link</a>. Including <code>named slots</code> and <code>scoped slots</code>.</li>
+  <li><strong>( Accessibility ) Some html attibutes:</strong>
+    <ol>
+      <li><strong>{ role }:</strong> <a href="https://www.w3.org/WAI/PF/HTML/wiki/RoleAttribute">Link</a>.</li>
+      <li><strong>{ aria-* }.</strong></li>
+      <li><strong>{ aria-label }:</strong> <a href="https://stackoverflow.com/questions/52584424/where-and-when-to-use-aria-label">where and when to use aria-label?</a>. It mentions, when screen reader read that element (tag), only <code>aria-label</code> will be read, the text between that element (tag) will not be read.</li>
+    </ol>
+  </li>
+  <li><strong>( Documentary ) { CBC Docs } - This is Meagan Duhamel & Eric Radford’s last chance to win an Olympic gold - Beyond the Limits:</strong> <a href="https://youtu.be/ZTQh3MkOQtI">Link</a>.</li>
+  <li><strong>( Philosophy ) { udn.com } - 林至浩／愛是什麼？愛是一種情感嗎？:</strong> <a href="https://opinion.udn.com/opinion/story/6685/3757103">Link</a>.</li>
+  <ol>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>07:40 Wake up.</strong></li>
+        <li><strong>07:45 Try to go exercising:</strong> I feel ache of my waist and lower back on the way to the lake. When I walk to lake and just having few steps, I was feeling I'm not going to do this because this might cause more injury. Then I walk back.</li>
+        <li><strong>08:15 Exercising at home:</strong> Mostly <code>Plank</code>. I want to focus on my <u>lower back</u> and <u>core muscles</u>.</li>
+        <li><strong>08 40 Upload blog.</strong></li>
+        <li><strong>09:00 Cooking, eating, reading:</strong> <a href="https://w3c.github.io/using-aria/#firstrule">W3c - Using ARIA</a>.</li>
+        <li><strong>09:40 Brushing teeth.</strong></li>
+        <li><strong>09:50 Reading { Accessibility beginners guide }:</strong> <a href="https://www.deque.com/accessibility-beginners-guide/">Link</a>.</li>
+        <li><strong>10:30 Taking a nap:</strong> Too sleepy, low efficiency. Still can't get good resources for understand just basic aria attribute. Might use <code>grep</code> to grep the source code with pattern <code>aria</code> to learn something later.</li>
+        <li><strong>10:03 Watching video.</strong></li>
+        <li><strong>10:07 Trying to do { aria } and { role }attributes.</strong></li>
+        <li><strong>11:25 Trying to testing how { base.scss } effect { bootstrap } styling:</strong> I make 2 different enviroments, before migrating <code>sale</code> and after migrating <code>sale</code>, and see how bootstrap works, when I add diffent elements, such as <code>nav</code>.</li>
+        <li><strong>12:00 Change Few icon font on { lahSale }.</strong></li>
+        <li><strong>12:50 Understand { slot } in { vue }.</strong></li>
+        <li><strong>13:25 Cooking.</strong></li>
+        <li><strong>13:58 Eating, watching video, brushing teeth.</strong></li>
+        <li><strong>14:35 Changing { message.vue } of { lahSale }.</strong></li>
+        <li><strong>15:35 Misc:</strong> Doing nothing.</li>
+        <li><strong>16:35 Reading book { Brave new world - revisited }:</strong> Long time no reading. I just make skimming on the rest of this book I have not finished yet. I found I get enough concept of <code>Brave new world</code> so I don't need to have too too detail reading.</li>
+        <li><strong>17:10 Grocery:</strong> I even buying drinks, long time no do this, I have totally no idea why I'm doing this.</li>
+        <li><strong>17:40 Casually roaming on web:</strong> Including watching videos, and reading articles.</li>
+        <li><strong>22:50 Reading book { The One Thing }:</strong> It has been a long time since last time I read this book.</li>
+        <li><strong>23:00 Watching video.</strong></li>
+        <li><strong>23:10 Exercising:</strong> Trainning lower back, <u>reverse plank</u>.</li>
+        <li><strong>23:15 Sleep.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-05-15<a id="190515m012915"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s3">{ Stoicism }</div>
+    <div class="itm s1">Virtue</div>
+    <div class="itm s1">Understand what you can/can't controls</div>
+    <div class="itm s1">Understand what won't/will changes</div>
+    <div class="itm s1">Book</div>
+    <div class="itm s1">Exercising</div>
+  </div>
+  <ol>
+    <li><strong>( Philosophy ) { Stoicism } - { Pursuit of Wonder } - The Art of Not Caring:</strong> <a href="https://youtu.be/uLOB6hj3M_Q">Link</a>. The main idea of <code>Stoicism</code> from this video is, we don't rely on external [ materials ]-[ content ] to make us gain happiness (substitute), because these thing can change all the time, they are not predictable, stable, eternal, our expectation go up and down if we rely on those external [ materials ]-[ content ]. In other words, Stoicism is about knowing what we can't control and what we can, the internal is what we can control, i.e. our mind, [ attitue ],[ angle ] when [ looking ],[ facing ] bad things. Stoicism is about don't rely on external [ materials ]-[ content ] to gain  happiness (substitute), by living stoic, we can be calm, peace, happiness without those temporary things, too.</li>
+    <li><strong>( Philosophy ) { Stoicism } as a philosophy for an ordinary life - Massimo Pigliucci - { TEDxAthens }:</strong>
+      <ol>
+        <li><strong>Link:</strong><a href="https://youtu.be/Yhn1Fe8cT0Q"> Link</a>.</li>
+        <li><strong>Core 2 pillars of Stoicism:</strong> <strong>virtue</strong> (Ethics, courage, wisdom ...) and <strong>knowing what you can and you can't control</strong>.</li>
+        <li><strong>Famous [ people ]-[ model ]:</strong> Marcus Aurelius.</li>
+      </ol>
+    </li>
+    <li><strong>( Philosophy ) { Stoicism } - Marcus Aurelius - lecture by professor Michael Sugrue:</strong> <a href="https://youtu.be/5897dMWJiSM">Link</a>.</li>
+    <li><strong><del>( Philosophy ) { Stoicism } - Marcus Aurelius - How to Live A Good Life:</del></strong> <a href="https://youtu.be/Uma3d83TZJQ">Link</a>. I think this video didn't sufficiently convey the core concept of <code>Stoic</code>. I think <strong>2 pillars</strong> of <code>Stoicism</code> is: <code>virtue</code> (ethics ; courage ; wisdom ...) and knowing what you can and you can't <code>control</code> (living in "now" ; <code>Stoic Optimism</code>, the concept of you don't care if the result is good or bad in the future, even you know it is bad and it will never be changed, you still be optimistic toward the current [ situation ]-[ difficulty ].). </li>
+    <li><strong>( Book ) { TED-Ed } - { Crime and Punishment } (罪與罰):</strong> <a href="https://youtu.be/Vtkv3-endYc">Link</a>.</li>
+    <li><strong>( Book ) { Suzanne's Diary for Nicholas } (蘇珊日記):</strong> <a href="https://goods.ruten.com.tw/item/show?21504361295615">Link</a>. --{ 其中有個非經常典的指引是：「想像人生是一場同時必須耍著五顆球的雜技，這五顆球分別為工作（work）、家庭（family）、健康（health）、朋友（friends），和尊嚴（spirit）。你必須讓這五顆球都保持在半空中不能掉下。但有一天，你會突然明白，工作這顆球是橡膠做的，掉到地上，它還是會彈起來，但是另外四顆球，家庭、健康、朋友、氣節 都是玻璃做的，任何一顆球掉了，就會破了一角、甚至粉碎，無法復原。一旦真正明白了這五顆球的啟示，就會學習去平衡你的生命。」 }--. // <a href="https://www.jianshu.com/p/2ec650ed1051">蘇珊日記 書評，和劇情大綱</a>.</li>
+    <li><strong>( Video ) { Ruby Granger } - Productive and Aesthetic Study With Me / Study Day (with timestamps):</strong> <a href="https://youtu.be/CmJHQNYNEr8">Link</a>.</li>
+    <li><strong>( News ) Sudan protests and possible revolution:</strong> <a href="https://youtu.be/c4DsLetSS_Y?t=371">Link</a>.</li>
+    <li><strong>( Book ) Guns, Germs, and Steel:</strong> <a href="https://youtu.be/zsXcn398iuk">Link</a>. I don't need to read this.</li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>01:25 Insomnia:</strong> Can't sleep, don't know why, maybe too excited.</li>
+        <li><strong>01:26 Update blog.</strong></li>
+        <li><strong>01:40 Watching video:</strong> <a href="https://youtu.be/UpREQLsVFRE">台灣基進 - 中國資訊滲透戰 - 假新聞</a>, <a href="https://youtu.be/kOHB85vDuow">TWICE "FANCY" M/V</a>.</li>
+        <li><strong>02:05 Reading book { The One Thing }.</strong></li>
+        <li><strong>02:45 Misc.</strong></li>
+        <li><strong>03:40 Go to bed again:</strong></li>
+        <li><strong>10:45 Wake up.</strong></li>
+        <li><strong>10:46 Prepare ingredients.</strong></li>
+        <li><strong>11:00 Exercising:</strong> <a href="https://youtu.be/cZnsLVArIt8">{ FitnessBlender} - Brutal HIIT Ladder Workout - 20 Minute HIIT Workout at Home</a>, <code>face-up plank</code>, and <code>side plank</code>.</li>
+        <li><strong>11:30 Relax.</strong></li>
+        <li><strong>11:35 Cooking.</strong></li>
+        <li><strong>11:55 Watching video.</strong></li>
+        <li><strong>13:35 Reading book { The One Thing }.</strong></li>
+        <li><strong>14:50 Taking nap.</strong></li>
+        <li><strong>15:50 Watching video.</strong></li>
+        <li><strong>16:00 Taking shower.</strong></li>
+        <li><strong>16:30 Watching video.</strong></li>
+        <li><strong>16:55 Reading book { The One Thing }:</strong> --{ What is the "one thing" you can do such that by doing it everything else will be easier or unnecessary? Ask this question to every "ball" you handles - your spiritual life ; physical health ; personal life ; relationship ; job. }-- // --{ People do not decide their futures, they decide their habits and their habits decide their futures. }-- // --{ 3 layer of iceberg from bottom to top - purpose, priority, productivity. What you see (productivity) is determined by what you don't (priority and purpose) }--.</li>
+        <li><strong>18:25 Misc.</strong></li>
+        <li><strong>19:30 Cooking.</strong></li>
+        <li><strong>20:00 Watching video:</strong> Mostly about <code>Stoicism</code>.</li>
+        <li><strong>22:40 Sleep.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-05-16<a id="190516m082549"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">Exercising</div>
     <div class="itm s1">Back-end</div>
     <div class="itm s1">{ Express.js }</div>
     <div class="itm s1">{ LoveAndHappiness }</div>
@@ -583,8 +895,11 @@ date: 2019-05-01 13:07:07
   <ol>
     <li><strong>By time:</strong>
       <ol>
-        <li><strong>07:30 Wake up.</strong></li>
-        <li><strong>07:50 Upload blog.</strong></li>
+        <li><strong>06:45 Wake up.</strong></li>
+        <li><strong>06:55 Go exercising.</strong></li>
+        <li><strong>07:50 Take a shower.</strong></li>
+        <li><strong>08:15 Prepare ingredients.</strong></li>
+        <li><strong>08:25 Upload blog.</strong></li>
         <li><strong>?? Cooking, eating, reading, thinking.</strong></li>
       </ol>
     </li>
