Add new log-table file.

--- a/source/_posts/19/03/18/190318m144719.md
+++ b/source/_posts/19/03/18/190318m144719.md
@@ -22,6 +22,7 @@ date: 2019-03-18 14:47:19
             <li><strong>2019-03:</strong> <a href="/treegbBlog/19/03/18/190318m150030">190318 ( Log table ) 2019-03 # 190318m150030</a>.</li>
             <li><strong>2019-04:</strong> <a href="/treegbBlog/19/04/01/190401m013644">190401 ( Log table ) 2019-04 # 190401m013644</a>.</li>
             <li><strong>2019-05:</strong> <a href="/treegbBlog/19/05/01/190501m130707">190501 ( Log table ) 2019-05 # 190501m130707</a>.</li>
+            <li><strong>2019-06:</strong> <a href="/treegbBlog/19/06/01/190601m112844">190601 ( Log table ) 2019-06 # 190601m112844</a>.</li>
           </ol>
         </li>
       </ol>
@@ -33,7 +34,7 @@ date: 2019-03-18 14:47:19
 
 <div class="facetList">
 Cmm: u190318m144719 x88lost x88fs c88log log88table c88current overview
-Current: ti88crr88y19 ti88crr88y19dw1 ti88crr88y19m04 ti88crr88y19m04d01 ti88crr88y19m04dw1 ti88crr88y19q2 ti88crr88y19q2dw1 ti88crr88y19w14 ti88crr88y19w14dw1
+Current: ti88crr88y19 ti88crr88y19dw6 ti88crr88y19m06 ti88crr88y19m06d01 ti88crr88y19m06dw6 ti88crr88y19q2 ti88crr88y19q2dw6 ti88crr88y19w22 ti88crr88y19w22dw6
 Time (d): ti88y19 ti88y19dw1 ti88y19m03 ti88y19m03d18 ti88y19m03dw1 ti88y19q1 ti88y19q1dw1 ti88y19w12 ti88y19w12dw1
 </div>
 {% endraw %}
